--- a/instructions/presentation_slides.tex
+++ b/instructions/presentation_slides.tex
@@ -88,7 +88,7 @@
 % - Use the \inst command only if there are several affiliations.
 % - Keep it simple, no one is interested in your street address.
 
-\date{\today}
+\date{}
 % - Either use conference name or its abbreviation.
 % - Not really informative to the audience, more for people (including
 %   yourself) who are reading the slides online
